# Instagram-Clone-Static

./: README.md  pyproject.toml  requirements.txt
html/: index.html
insta485/templates/: explore.html  followers.html  following.html  index.html  post.html  user.html
insta485generator/: __main__.py
tests/: test_handcoded_index.py  test_handcoded_user.py  test_insta485generator_public.py  test_style.py  test_template_html.py
tests/testdata/hello_485/: config.json
tests/testdata/hello_485/templates/: 485.html
